fixing overflow issues on ios

--- a/assets/scss/partials/_base.scss
+++ b/assets/scss/partials/_base.scss
@@ -9,8 +9,10 @@
     display: none!important;
 }
 
-html {
+html,body {
     box-sizing: border-box;
+    width:100%;
+    max-width:100%;
 }
 
 *,
@@ -24,6 +26,8 @@ html {
     line-height: $base-line-height;
     width: 100%;
     width: 100vw;
+    max-width:100vw;
+    overflow-x:hidden;
     border: 0;
     margin: 0;
     padding: 0;
@@ -52,8 +56,6 @@ body {
     margin:0;
     min-height: 100%;
     min-height: 100vh;
-    margin-right:-16px;
-    padding-right:16px;
     margin-top: 0px;
     padding-top: 0px;
     overflow-x: hidden;
