--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,18 +27,15 @@
 main[role="main"],
 main.main {
     width: 100%;
-    width: 100vw;
-    max-width:100vw;
+    max-width:100%;
+    border:none;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 60px;
+    margin: 60px 0px 3em 0px;
+    padding:0px;
     min-height: 100%;
-    margin-bottom: 3em;
     overflow-x: hidden;
     @include header-transition;
     &.open {
-        // transform: translateX(-$site-menu-width);
         opacity: 0.3;
         @include MQ(M) {
             transform: translateX(0%);
@@ -51,10 +48,11 @@ article {
     display: block;
     width: 100%;
     max-width: 100%;
-    min-height: 100%;
+    position:relative;
+    left:0px;
+    margin:auto;
     overflow-y: scroll;
     overflow-x: hidden;
-    margin-right: -16px;
     &::-webkit-scrollbar {
         display: none!important;
     }
@@ -70,12 +68,14 @@ article {
     display: block;
     margin: auto;
     width: 95%;
-    width: 95vw;
+    max-width: 95%;
     overflow-x:hidden;
+    position:relative;
     padding-bottom: 4em;
     position: relative;
     @include MQ(M) {
         width: $content-max-width;
+        margin:auto;
         overflow-x:visible;
     }
 }
